# dnd-5e-papercraft-spellcaster

./: .gitignore  Orikami.md  README.bk.md  README.md  Spellcasting.md  gen-all.sh  template.md
.github/workflows/: static.yml
archetypes/default/: Ability_Score_Improvement.md  Papercraft_Familiar.md  Spellcasting.md
archetypes/orikami/: Familiar_Burst.md  Familiar_Spells.md  Flavor.md  Improved_Familiar.md
archetypes/oriken/: Enhance_Armor.md  Extra_Attack.md  Familiar_Weapon.md  Fighting_Style.md
src/: CMakeLists.txt  common.cpp  common.h  main.cpp  orikami.h  oriken.h
templates/: archetype.md  index.html  styles.css
tools/: gen-all.sh
